src/sidl/grammar/SiDLParser.java
// $ANTLR 3.4 /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g 2012-09-19 18:21:46

	package sidl.grammar;
	import sidl.grammar.ast.*;
	import sidl.grammar.ast.expressions.numeric.*;
	import sidl.grammar.ast.expressions.logic.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class SiDLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "BEGIN", "BLOCK", "BWD", "BY", "CALL", "CHAR", "COMMENT", "DIGIT", "DO", "DROP", "ELSE", "ELSEIF", "END", "ENDIF", "FROM", "FUNC", "FWD", "ID", "IF", "INT", "LEFT", "LOOP", "MOVE", "NL", "NOT", "NUMBER", "NZ_DIGIT", "OR", "PEN", "PROC", "PROGR", "PULL", "RETURN", "RIGHT", "THEN", "TO", "TURN", "UNTIL", "WHILE", "WITH", "WS", "XOR", "'!='", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "'<'", "'<='", "'='", "'>'", "'>='", "'['", "']'"
    };

    public static final int EOF=-1;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int AND=4;
    public static final int BEGIN=5;
    public static final int BLOCK=6;
    public static final int BWD=7;
    public static final int BY=8;
    public static final int CALL=9;
    public static final int CHAR=10;
    public static final int COMMENT=11;
    public static final int DIGIT=12;
    public static final int DO=13;
    public static final int DROP=14;
    public static final int ELSE=15;
    public static final int ELSEIF=16;
    public static final int END=17;
    public static final int ENDIF=18;
    public static final int FROM=19;
    public static final int FUNC=20;
    public static final int FWD=21;
    public static final int ID=22;
    public static final int IF=23;
    public static final int INT=24;
    public static final int LEFT=25;
    public static final int LOOP=26;
    public static final int MOVE=27;
    public static final int NL=28;
    public static final int NOT=29;
    public static final int NUMBER=30;
    public static final int NZ_DIGIT=31;
    public static final int OR=32;
    public static final int PEN=33;
    public static final int PROC=34;
    public static final int PROGR=35;
    public static final int PULL=36;
    public static final int RETURN=37;
    public static final int RIGHT=38;
    public static final int THEN=39;
    public static final int TO=40;
    public static final int TURN=41;
    public static final int UNTIL=42;
    public static final int WHILE=43;
    public static final int WITH=44;
    public static final int WS=45;
    public static final int XOR=46;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public SiDLParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public SiDLParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return SiDLParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g"; }


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "program"
    // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:64:1: program : ( procedure | function | NL )* mainproc -> ^( PROGR ( procedure )* ( function )* mainproc ) ;
    public final SiDLParser.program_return program() throws RecognitionException {
        SiDLParser.program_return retval = new SiDLParser.program_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token NL3=null;
        SiDLParser.procedure_return procedure1 =null;

        SiDLParser.function_return function2 =null;

        SiDLParser.mainproc_return mainproc4 =null;


        Object NL3_tree=null;
        RewriteRuleTokenStream stream_NL=new RewriteRuleTokenStream(adaptor,"token NL");
        RewriteRuleSubtreeStream stream_mainproc=new RewriteRuleSubtreeStream(adaptor,"rule mainproc");
        RewriteRuleSubtreeStream stream_procedure=new RewriteRuleSubtreeStream(adaptor,"rule procedure");
        RewriteRuleSubtreeStream stream_function=new RewriteRuleSubtreeStream(adaptor,"rule function");
        try {
            // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:65:2: ( ( procedure | function | NL )* mainproc -> ^( PROGR ( procedure )* ( function )* mainproc ) )
            // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:65:4: ( procedure | function | NL )* mainproc
            {
            // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:65:4: ( procedure | function | NL )*
            loop1:
            do {
                int alt1=4;
                switch ( input.LA(1) ) {
                case PROC:
                    {
                    alt1=1;
                    }
                    break;
                case FUNC:
                    {
                    alt1=2;
                    }
                    break;
                case NL:
                    {
                    alt1=3;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:65:5: procedure
            	    {
            	    pushFollow(FOLLOW_procedure_in_program272);
            	    procedure1=procedure();

            	    state._fsp--;

            	    stream_procedure.add(procedure1.getTree());

            	    }
            	    break;
            	case 2 :
            	    // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:65:17: function
            	    {
            	    pushFollow(FOLLOW_function_in_program276);
            	    function2=function();

            	    state._fsp--;

            	    stream_function.add(function2.getTree());

            	    }
            	    break;
            	case 3 :
            	    // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:65:28: NL
            	    {
            	    NL3=(Token)match(input,NL,FOLLOW_NL_in_program280);  
            	    stream_NL.add(NL3);


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            pushFollow(FOLLOW_mainproc_in_program284);
            mainproc4=mainproc();

            state._fsp--;

            stream_mainproc.add(mainproc4.getTree());

            // AST REWRITE
            // elements: function, procedure, mainproc
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 66:3: -> ^( PROGR ( procedure )* ( function )* mainproc )
            {
                // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:66:6: ^( PROGR ( procedure )* ( function )* mainproc )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                new ProgramNode(PROGR)
                , root_1);

                // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:66:27: ( procedure )*
                while ( stream_procedure.hasNext() ) {
                    adaptor.addChild(root_1, stream_procedure.nextTree());

                }
                stream_procedure.reset();

                // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:66:38: ( function )*
                while ( stream_function.hasNext() ) {
                    adaptor.addChild(root_1, stream_function.nextTree());

                }
                stream_function.reset();

                adaptor.addChild(root_1, stream_mainproc.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "program"


    public static class procedure_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "procedure"
    // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:72:1: procedure : PROC ID ( '(' ( idlist )? ')' )? NL block END NL -> ^( ID ( idlist )? block ) ;
    public final SiDLParser.procedure_return procedure() throws RecognitionException {
        SiDLParser.procedure_return retval = new SiDLParser.procedure_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token PROC5=null;
        Token ID6=null;
        Token char_literal7=null;
        Token char_literal9=null;
        Token NL10=null;
        Token END12=null;
        Token NL13=null;
        SiDLParser.idlist_return idlist8 =null;

        SiDLParser.block_return block11 =null;


        Object PROC5_tree=null;
        Object ID6_tree=null;
        Object char_literal7_tree=null;
        Object char_literal9_tree=null;
        Object NL10_tree=null;
        Object END12_tree=null;
        Object NL13_tree=null;
        RewriteRuleTokenStream stream_49=new RewriteRuleTokenStream(adaptor,"token 49");
        RewriteRuleTokenStream stream_48=new RewriteRuleTokenStream(adaptor,"token 48");
        RewriteRuleTokenStream stream_NL=new RewriteRuleTokenStream(adaptor,"token NL");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_END=new RewriteRuleTokenStream(adaptor,"token END");
        RewriteRuleTokenStream stream_PROC=new RewriteRuleTokenStream(adaptor,"token PROC");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        RewriteRuleSubtreeStream stream_idlist=new RewriteRuleSubtreeStream(adaptor,"rule idlist");
        try {
            // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:73:2: ( PROC ID ( '(' ( idlist )? ')' )? NL block END NL -> ^( ID ( idlist )? block ) )
            // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:73:4: PROC ID ( '(' ( idlist )? ')' )? NL block END NL
            {
            PROC5=(Token)match(input,PROC,FOLLOW_PROC_in_procedure318);  
            stream_PROC.add(PROC5);


            ID6=(Token)match(input,ID,FOLLOW_ID_in_procedure320);  
            stream_ID.add(ID6);


            // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:73:12: ( '(' ( idlist )? ')' )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==48) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:73:13: '(' ( idlist )? ')'
                    {
                    char_literal7=(Token)match(input,48,FOLLOW_48_in_procedure323);  
                    stream_48.add(char_literal7);


                    // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:73:17: ( idlist )?
                    int alt2=2;
                    int LA2_0 = input.LA(1);

                    if ( (LA2_0==ID) ) {
                        alt2=1;
                    }
                    switch (alt2) {
                        case 1 :
                            // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:73:17: idlist
                            {
                            pushFollow(FOLLOW_idlist_in_procedure325);
                            idlist8=idlist();

                            state._fsp--;

                            stream_idlist.add(idlist8.getTree());

                            }
                            break;

                    }


                    char_literal9=(Token)match(input,49,FOLLOW_49_in_procedure328);  
                    stream_49.add(char_literal9);


                    }
                    break;

            }


            NL10=(Token)match(input,NL,FOLLOW_NL_in_procedure332);  
            stream_NL.add(NL10);


            pushFollow(FOLLOW_block_in_procedure334);
            block11=block();

            state._fsp--;

            stream_block.add(block11.getTree());

            END12=(Token)match(input,END,FOLLOW_END_in_procedure336);  
            stream_END.add(END12);


            NL13=(Token)match(input,NL,FOLLOW_NL_in_procedure338);  
            stream_NL.add(NL13);


            // AST REWRITE
            // elements: ID, block, idlist
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 73:48: -> ^( ID ( idlist )? block )
            {
                // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:73:51: ^( ID ( idlist )? block )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                new ProcedureNode(stream_ID.nextToken())
                , root_1);

                // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:73:71: ( idlist )?
                if ( stream_idlist.hasNext() ) {
                    adaptor.addChild(root_1, stream_idlist.nextTree());

                }
                stream_idlist.reset();

                adaptor.addChild(root_1, stream_block.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "procedure"


    public static class mainproc_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "mainproc"
    // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:76:1: mainproc : BEGIN NL block END -> ^( BEGIN block ) ;
    public final SiDLParser.mainproc_return mainproc() throws RecognitionException {
        SiDLParser.mainproc_return retval = new SiDLParser.mainproc_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token BEGIN14=null;
        Token NL15=null;
        Token END17=null;
        SiDLParser.block_return block16 =null;


        Object BEGIN14_tree=null;
        Object NL15_tree=null;
        Object END17_tree=null;
        RewriteRuleTokenStream stream_NL=new RewriteRuleTokenStream(adaptor,"token NL");
        RewriteRuleTokenStream stream_END=new RewriteRuleTokenStream(adaptor,"token END");
        RewriteRuleTokenStream stream_BEGIN=new RewriteRuleTokenStream(adaptor,"token BEGIN");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        try {
            // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:77:2: ( BEGIN NL block END -> ^( BEGIN block ) )
            // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:77:4: BEGIN NL block END
            {
            BEGIN14=(Token)match(input,BEGIN,FOLLOW_BEGIN_in_mainproc364);  
            stream_BEGIN.add(BEGIN14);


            NL15=(Token)match(input,NL,FOLLOW_NL_in_mainproc366);  
            stream_NL.add(NL15);


            pushFollow(FOLLOW_block_in_mainproc368);
            block16=block();

            state._fsp--;

            stream_block.add(block16.getTree());

            END17=(Token)match(input,END,FOLLOW_END_in_mainproc370);  
            stream_END.add(END17);


            // AST REWRITE
            // elements: block, BEGIN
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 77:24: -> ^( BEGIN block )
            {
                // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:77:27: ^( BEGIN block )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                new ProcedureNode(stream_BEGIN.nextToken())
                , root_1);

                adaptor.addChild(root_1, stream_block.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "mainproc"


    public static class idlist_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "idlist"
    // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:80:1: idlist : ID ( ',' ! ID )* ;
    public final SiDLParser.idlist_return idlist() throws RecognitionException {
        SiDLParser.idlist_return retval = new SiDLParser.idlist_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token ID18=null;
        Token char_literal19=null;
        Token ID20=null;

        Object ID18_tree=null;
        Object char_literal19_tree=null;
        Object ID20_tree=null;

        try {
            // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:81:2: ( ID ( ',' ! ID )* )
            // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:81:4: ID ( ',' ! ID )*
            {
            root_0 = (Object)adaptor.nil();


            ID18=(Token)match(input,ID,FOLLOW_ID_in_idlist393); 
            ID18_tree = 
            new IdNode(ID18) 
            ;
            adaptor.addChild(root_0, ID18_tree);


            // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:81:15: ( ',' ! ID )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==52) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:81:16: ',' ! ID
            	    {
            	    char_literal19=(Token)match(input,52,FOLLOW_52_in_idlist399); 

            	    ID20=(Token)match(input,ID,FOLLOW_ID_in_idlist402); 
            	    ID20_tree = 
            	    new IdNode(ID20) 
            	    ;
            	    adaptor.addChild(root_0, ID20_tree);


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "idlist"


    public static class block_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "block"
    // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:84:1: block : ( statement | NL )+ -> ^( BLOCK ( statement )+ ) ;
    public final SiDLParser.block_return block() throws RecognitionException {
        SiDLParser.block_return retval = new SiDLParser.block_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token NL22=null;
        SiDLParser.statement_return statement21 =null;


        Object NL22_tree=null;
        RewriteRuleTokenStream stream_NL=new RewriteRuleTokenStream(adaptor,"token NL");
        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        try {
            // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:85:2: ( ( statement | NL )+ -> ^( BLOCK ( statement )+ ) )
            // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:85:4: ( statement | NL )+
            {
            // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:85:4: ( statement | NL )+
            int cnt5=0;
            loop5:
            do {
                int alt5=3;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==CALL||(LA5_0 >= DO && LA5_0 <= DROP)||LA5_0==FROM||(LA5_0 >= ID && LA5_0 <= IF)||LA5_0==MOVE||LA5_0==PULL||LA5_0==TURN||LA5_0==WITH) ) {
                    alt5=1;
                }
                else if ( (LA5_0==NL) ) {
                    alt5=2;
                }


                switch (alt5) {
            	case 1 :
            	    // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:85:5: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_block419);
            	    statement21=statement();

            	    state._fsp--;

            	    stream_statement.add(statement21.getTree());

            	    }
            	    break;
            	case 2 :
            	    // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:85:17: NL
            	    {
            	    NL22=(Token)match(input,NL,FOLLOW_NL_in_block423);  
            	    stream_NL.add(NL22);


            	    }
            	    break;

            	default :
            	    if ( cnt5 >= 1 ) break loop5;
                        EarlyExitException eee =
                            new EarlyExitException(5, input);
                        throw eee;
                }
                cnt5++;
            } while (true);


            // AST REWRITE
            // elements: statement
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 85:23: -> ^( BLOCK ( statement )+ )
            {
                // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:85:26: ^( BLOCK ( statement )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                new BlockNode(BLOCK)
                , root_1);

                if ( !(stream_statement.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_statement.hasNext() ) {
                    adaptor.addChild(root_1, stream_statement.nextTree());

                }
                stream_statement.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "block"


    public static class statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "statement"
    // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:87:1: statement : ( assignment | action | procedure_call | control ) NL !;
    public final SiDLParser.statement_return statement() throws RecognitionException {
        SiDLParser.statement_return retval = new SiDLParser.statement_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token NL27=null;
        SiDLParser.assignment_return assignment23 =null;

        SiDLParser.action_return action24 =null;

        SiDLParser.procedure_call_return procedure_call25 =null;

        SiDLParser.control_return control26 =null;


        Object NL27_tree=null;

        try {
            // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:88:2: ( ( assignment | action | procedure_call | control ) NL !)
            // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:88:4: ( assignment | action | procedure_call | control ) NL !
            {
            root_0 = (Object)adaptor.nil();


            // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:88:4: ( assignment | action | procedure_call | control )
            int alt6=4;
            switch ( input.LA(1) ) {
            case ID:
                {
                alt6=1;
                }
                break;
            case DROP:
            case MOVE:
            case PULL:
            case TURN:
                {
                alt6=2;
                }
                break;
            case CALL:
                {
                alt6=3;
                }
                break;
            case DO:
            case FROM:
            case IF:
            case WITH:
                {
                alt6=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;

            }

            switch (alt6) {
                case 1 :
                    // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:88:5: assignment
                    {
                    pushFollow(FOLLOW_assignment_in_statement450);
                    assignment23=assignment();

                    state._fsp--;

                    adaptor.addChild(root_0, assignment23.getTree());

                    }
                    break;
                case 2 :
                    // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:88:18: action
                    {
                    pushFollow(FOLLOW_action_in_statement454);
                    action24=action();

                    state._fsp--;

                    adaptor.addChild(root_0, action24.getTree());

                    }
                    break;
                case 3 :
                    // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:88:27: procedure_call
                    {
                    pushFollow(FOLLOW_procedure_call_in_statement458);
                    procedure_call25=procedure_call();

                    state._fsp--;

                    adaptor.addChild(root_0, procedure_call25.getTree());

                    }
                    break;
                case 4 :
                    // /Users/enrico/Documents/Workspace/SiDL/src/sidl/grammar/SiDL.g:88:44: control
                    {
                    pushFollow(FOLLOW_control_in_statement462);
                    control26=control();

                    state._fsp--;

                    adaptor.addChild(root_0, control26.getTree());

                    }
                    break;

            }


            NL27=(Token)match(input,NL,FOLLOW_NL_in_statement465); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "statement"


    public static class assignment_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

